// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Styled Components BaseButton - minimal compact default: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.mono200",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "transparent",
  "border": "none",
  "borderRadius": "$theme.borders.radius200",
  "color": "$theme.colors.primary",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale200",
  "paddingLeft": "$theme.sizing.scale600",
  "paddingRight": "$theme.sizing.scale600",
  "paddingTop": "$theme.sizing.scale200",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - minimal compact round: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.mono200",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "transparent",
  "border": "none",
  "borderRadius": "50%",
  "color": "$theme.colors.primary",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale400",
  "paddingRight": "$theme.sizing.scale400",
  "paddingTop": "$theme.sizing.scale400",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - minimal compact square: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.mono200",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "transparent",
  "border": "none",
  "borderRadius": "$theme.borders.radius200",
  "color": "$theme.colors.primary",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale400",
  "paddingRight": "$theme.sizing.scale400",
  "paddingTop": "$theme.sizing.scale400",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - minimal default default: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.mono200",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "transparent",
  "border": "none",
  "borderRadius": "$theme.borders.radius200",
  "color": "$theme.colors.primary",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale300",
  "paddingLeft": "$theme.sizing.scale600",
  "paddingRight": "$theme.sizing.scale600",
  "paddingTop": "$theme.sizing.scale300",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - minimal default round: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.mono200",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "transparent",
  "border": "none",
  "borderRadius": "50%",
  "color": "$theme.colors.primary",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale500",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale500",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - minimal default square: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.mono200",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "transparent",
  "border": "none",
  "borderRadius": "$theme.borders.radius200",
  "color": "$theme.colors.primary",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale500",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale500",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - primary compact default: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.primary600",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.primary500",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "$theme.colors.primary",
  "border": "none",
  "borderRadius": "$theme.borders.radius200",
  "color": "$theme.colors.white",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale200",
  "paddingLeft": "$theme.sizing.scale600",
  "paddingRight": "$theme.sizing.scale600",
  "paddingTop": "$theme.sizing.scale200",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - primary compact round: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.primary600",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.primary500",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "$theme.colors.primary",
  "border": "none",
  "borderRadius": "50%",
  "color": "$theme.colors.white",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale400",
  "paddingRight": "$theme.sizing.scale400",
  "paddingTop": "$theme.sizing.scale400",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - primary compact square: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.primary600",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.primary500",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "$theme.colors.primary",
  "border": "none",
  "borderRadius": "$theme.borders.radius200",
  "color": "$theme.colors.white",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale400",
  "paddingRight": "$theme.sizing.scale400",
  "paddingTop": "$theme.sizing.scale400",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - primary default default: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.primary600",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.primary500",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "$theme.colors.primary",
  "border": "none",
  "borderRadius": "$theme.borders.radius200",
  "color": "$theme.colors.white",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale300",
  "paddingLeft": "$theme.sizing.scale600",
  "paddingRight": "$theme.sizing.scale600",
  "paddingTop": "$theme.sizing.scale300",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - primary default round: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.primary600",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.primary500",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "$theme.colors.primary",
  "border": "none",
  "borderRadius": "50%",
  "color": "$theme.colors.white",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale500",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale500",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - primary default square: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.primary600",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.primary500",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "$theme.colors.primary",
  "border": "none",
  "borderRadius": "$theme.borders.radius200",
  "color": "$theme.colors.white",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale500",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale500",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - secondary compact default: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.primary200",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.primary100",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "$theme.colors.primary50",
  "border": "none",
  "borderRadius": "$theme.borders.radius200",
  "color": "$theme.colors.primary",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale200",
  "paddingLeft": "$theme.sizing.scale600",
  "paddingRight": "$theme.sizing.scale600",
  "paddingTop": "$theme.sizing.scale200",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - secondary compact round: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.primary200",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.primary100",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "$theme.colors.primary50",
  "border": "none",
  "borderRadius": "50%",
  "color": "$theme.colors.primary",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale400",
  "paddingRight": "$theme.sizing.scale400",
  "paddingTop": "$theme.sizing.scale400",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - secondary compact square: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.primary200",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.primary100",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "$theme.colors.primary50",
  "border": "none",
  "borderRadius": "$theme.borders.radius200",
  "color": "$theme.colors.primary",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale400",
  "paddingRight": "$theme.sizing.scale400",
  "paddingTop": "$theme.sizing.scale400",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - secondary default default: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.primary200",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.primary100",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "$theme.colors.primary50",
  "border": "none",
  "borderRadius": "$theme.borders.radius200",
  "color": "$theme.colors.primary",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale300",
  "paddingLeft": "$theme.sizing.scale600",
  "paddingRight": "$theme.sizing.scale600",
  "paddingTop": "$theme.sizing.scale300",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - secondary default round: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.primary200",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.primary100",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "$theme.colors.primary50",
  "border": "none",
  "borderRadius": "50%",
  "color": "$theme.colors.primary",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale500",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale500",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - secondary default square: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.primary200",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.primary100",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "$theme.colors.primary50",
  "border": "none",
  "borderRadius": "$theme.borders.radius200",
  "color": "$theme.colors.primary",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale500",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale500",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - tertiary compact default: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.mono500",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono200",
  "border": "none",
  "borderRadius": "$theme.borders.radius200",
  "color": "$theme.colors.primary",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale200",
  "paddingLeft": "$theme.sizing.scale600",
  "paddingRight": "$theme.sizing.scale600",
  "paddingTop": "$theme.sizing.scale200",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - tertiary compact round: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.mono500",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono200",
  "border": "none",
  "borderRadius": "50%",
  "color": "$theme.colors.primary",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale400",
  "paddingRight": "$theme.sizing.scale400",
  "paddingTop": "$theme.sizing.scale400",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - tertiary compact square: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.mono500",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono200",
  "border": "none",
  "borderRadius": "$theme.borders.radius200",
  "color": "$theme.colors.primary",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale400",
  "paddingRight": "$theme.sizing.scale400",
  "paddingTop": "$theme.sizing.scale400",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - tertiary default default: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.mono500",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono200",
  "border": "none",
  "borderRadius": "$theme.borders.radius200",
  "color": "$theme.colors.primary",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale300",
  "paddingLeft": "$theme.sizing.scale600",
  "paddingRight": "$theme.sizing.scale600",
  "paddingTop": "$theme.sizing.scale300",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - tertiary default round: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.mono500",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono200",
  "border": "none",
  "borderRadius": "50%",
  "color": "$theme.colors.primary",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale500",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale500",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components BaseButton - tertiary default square: correct styles 1`] = `
Object {
  ":active:enabled": Object {
    "backgroundColor": "$theme.colors.mono500",
  },
  ":disabled": Object {
    "backgroundColor": "$theme.colors.mono300",
    "color": "$theme.colors.mono600",
    "cursor": "not-allowed",
  },
  ":hover:enabled": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  "WebkitAppearance": "none",
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono200",
  "border": "none",
  "borderRadius": "$theme.borders.radius200",
  "color": "$theme.colors.primary",
  "cursor": "pointer",
  "display": "flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale500",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale500",
  "textDecoration": "none",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "background",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Button Styled Components EndEnhancer - basic render: correct styles 1`] = `
Object {
  "display": "flex",
  "marginLeft": "$theme.sizing.scale500",
}
`;

exports[`Button Styled Components StartEnhancer - basic render: correct styles 1`] = `
Object {
  "display": "flex",
  "marginRight": "$theme.sizing.scale500",
}
`;
